k8s/app/bookinfo/manifests/20-service-productpage.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: bookinfo
  labels:
    app.kubernetes.io/name: productpage
    app.kubernetes.io/part-of: bookinfo
spec:
  type: NodePort
  selector:
    app: productpage
  ports:
    - name: http
      port: 9080
      targetPort: 9080
      nodePort: 31380
