k8s/app/bookinfo/manifests/21-service-details.yaml
apiVersion: v1
kind: Service
metadata:
  name: details
  namespace: bookinfo
  labels:
    app.kubernetes.io/name: details
    app.kubernetes.io/part-of: bookinfo
spec:
  type: ClusterIP
  selector:
    app: details
  ports:
    - name: http
      port: 9080
      targetPort: 9080
