k8s/app/bookinfo/manifests/23-service-reviews.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: bookinfo
  labels:
    app.kubernetes.io/name: reviews
    app.kubernetes.io/part-of: bookinfo
spec:
  type: ClusterIP
  selector:
    app: reviews
  ports:
    - name: http
      port: 9080
      targetPort: 9080
