k8s/app/bookinfo/manifests/24-ingress-productpage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productpage
  namespace: bookinfo
  labels:
    app.kubernetes.io/name: productpage
    app.kubernetes.io/part-of: bookinfo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
